add mentor page and update build script to add jpg

--- a/src/index.html
+++ b/src/index.html
@@ -68,7 +68,10 @@
                                 </li>
                             </ul>
                         </p>
-                        <br>Go to our <a href="https://github.com/cheeyim/wwckl-fugeeschool/blob/master/Fugee%20School%20Teacher-Roadmap.md">Github</a>.
+                        <p>
+                            Check out our <a href="/fugee/mentors">amazing team!</a>
+                        </p>
+                        Go to our <a href="https://github.com/cheeyim/wwckl-fugeeschool/blob/master/Fugee%20School%20Teacher-Roadmap.md">Github</a>.
                     </div>
                 </div>
             </div>
