--- a/src/fugee/mentors/index.html
+++ b/src/fugee/mentors/index.html
@@ -2,7 +2,12 @@
 <html lang="en">
 
 <head>
-
+    <!--must appear first tags-->
+    <meta property="og:image" content="../assets/fugeeschool.jpg" />
+    <meta property="og:description" content="We started our journey from Aug 2016 - Dec 2016 to teach HTML/CSS Web Development to the refugee students in Fugee. Our mentors were rostered in pairs and take turns to prepare materials and organise the teaching amongst themselves." />
+    <meta property="og:url"content="https://womenwhocodekl.com" />
+    <meta property="og:title" content="#wwcodeKL - Fugee School Mentors" />
+    <!--other tags -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
