--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,15 @@
 <html lang="en">
 
 <head>
+    <!--must appear first tags-->
+    <meta property="og:image" content="assets/logo.png" />
+    <meta property="og:description" content="#wwcodeKL is part of the is global non-profit dedicated to inspiring women to excel in technology careers. We work to support this generation in being and becoming leaders androle models in the tech industry." />
+    <meta property="og:url"content="https://womenwhocodekl.com" />
+    <meta property="og:title" content="Women Who Code KL" />
+    <!--other tags -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Women Who Code KL</title>
 
     <!-- Bootstrap -->
